Initial commit - project setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-echo venv/ > .gitignore
-echo __pycache__/ >> .gitignore
-echo *.pyc >> .gitignore
-echo .env >> .gitignore
+venv/ 
+__pycache__/ 
+*.pyc 
+.env 
